force-app/main/default/objects/Policy_Version__c/Policy_Version__c.object-meta.xml
<CustomObject>
    <label>Policy Version</label>
    <nameField>
        <displayFormat>PV-{00000}</displayFormat>
        <label>Policy Version Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>