force-app/main/default/objects/Policy_Version__c/fields/Is_Latest__c.field-meta.xml
<CustomField>
    <fullName>Is_Latest__c</fullName>
    <description>Checkbox will be checked if this version matches the Latest Version Number on the Policy.</description>
    <formula>Policy__r.Latest_Version_Number__c == Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Latest</label>
    <type>Checkbox</type>
</CustomField>