force-app/main/default/objects/Policy_Version__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <referenceTo>grc__Policy__c</referenceTo>
    <relationshipLabel>Policy Versions</relationshipLabel>
    <relationshipName>Policy_Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>