force-app/main/default/objects/Policy_Version__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>The version number of the policy document for this distribution.</description>
    <inlineHelpText>The version number of the policy document for this distribution.</inlineHelpText>
    <label>Version</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>